# insight-tracker

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.local.md.example  AGENTS.md  AGENTS.override.md.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.codex/: README.md  config.toml  config.toml.example
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
docs/: AI_DEV_WORKFLOW.md  BOOTSTRAP_ARTIFACT_WORKSHOP.md  BOOTSTRAP_NEXT_STEPS.md  CODEX_ENVIRONMENT.md  CODEX_FIRST_HOUR.md  CODEX_PROMPTING.md  CODEX_SESSION_STARTER.md  COMMAND_CONVENTIONS.md  CONTEXT_ENGINEERING.md  DATA_POLICY.md  DECISIONS.md  ENGINEERING_STANDARDS.md  GIT_WORKFLOW.md  GLOSSARY.md  GUARDRAILS.md  HUMAN_OPERATING_GUIDE.md  IDEATION_AND_PLANNING.md  INSTRUCTION_LAYERING.md  MODEL_POLICY.md  NEWCOMER_USABILITY_CHECKLIST.md  PROJECT_CHARTER.md  PROJECT_MANIFESTO.md  REPO_BOOTSTRAP_CHECKLIST.md  REPO_STRUCTURE.md  ROADMAP.md  START_HERE.md  TASK_MANAGEMENT.md  TECH_STACK_SELECTION.md  TEMPLATE_MAINTENANCE.md
evals/: EVAL-001-repo-change-triage.md  README.md
prompts/: PROMPT-001-repo-change-triage.md  README.md
runtime/: README.md
scripts/: README.md  bootstrap_new_project.ps1  bootstrap_new_project.py  check_repo.py  newcomer_smoke_test.py  run_prompt_evals.py
src/: README.md
tests/: test_bootstrap_new_project_python_script.py  test_bootstrap_new_project_script.py  test_newcomer_smoke_test.py  test_prompt_eval_runner.py  test_repo_contract.py  test_template_contract.py
work/: LEARNINGS.md  (+2 more)
(+66 files in other folders)
